--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .DS_Store
 __pycache__
 
-turtlesim_ws/build/*
-turtlesim_ws/install/*
-turtlesim_ws/log/*
+ros2_ws/build/*
+ros2_ws/install/*
+ros2_ws/log/*
